<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:scrollingCache="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activities.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie_details">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_marginBottom="50dp"
            android:onClick="onClick"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/btnExit"
            android:layout_gravity="start|top"
            android:contentDescription="@string/configuraciones"
            android:background="@drawable/circle_white"
            android:src="@drawable/ic_arrow_back_white"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <FrameLayout
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:elevation="4dp"
                android:background="@drawable/rectangle_white"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute">
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginBottom="20dp"
                        android:id="@+id/txtDate"
                        android:layout_gravity="start|center"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />
                    <TextView
                        android:gravity="start"
                        android:layout_marginEnd="140dp"
                        android:id="@+id/txtTitle"
                        android:layout_gravity="start|center"
                        android:textSize="24sp"
                        android:textColor="@color/md_black_1000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />
                    <TextView
                        android:id="@+id/txtRating"
                        android:layout_gravity="start|center"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />
                </LinearLayout>
                <TextView
                    android:textColor="@color/md_black_1000"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="30dp"
                    android:id="@+id/txtOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <ImageView
                android:layout_gravity="end|top"
                android:elevation="4dp"
                android:src="@drawable/art_2"
                android:contentDescription="@null"
                android:id="@+id/img"
                android:layout_width="150dp"
                android:layout_height="170dp"
                tools:ignore="UnusedAttribute" />
        </FrameLayout>

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/trailers"
            android:layout_margin="20dp"
            android:textColor="@color/md_white_1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/rvMovieTrailes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>